--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,184 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import "tailwindcss";
+
+@custom-variant dark (&:is(.dark *));
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-manrope: var(--font-manrope);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-primary-50: var(--primary-50);
+  --color-primary-100: var(--primary-100);
+  --color-primary-200: var(--primary-200);
+  --color-primary-300: var(--primary-300);
+  --color-primary-400: var(--primary-400);
+  --color-primary-500: var(--primary-500);
+  --color-primary-600: var(--primary-600);
+  --color-primary-700: var(--primary-700);
+  --color-primary-800: var(--primary-800);
+  --color-primary-900: var(--primary-900);
+  --color-primary-950: var(--primary-950);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --container-custom: 1224px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --radius: 0.625rem;
+  --background: hsl(0, 0%, 100%);
+  --foreground: hsl(0, 0%, 10%);
+  --card: hsl(0, 0%, 100%);
+  --card-foreground: hsl(0, 0%, 10%);
+  --popover: hsl(0, 0%, 100%);
+  --popover-foreground: hsl(0, 0%, 10%);
+  --primary: hsl(190, 100%, 43%);
+  --primary-50: hsl(300, 100%, 98%);
+  --primary-100: hsl(300, 100%, 97%);
+  --primary-200: hsl(300, 100%, 94%);
+  --primary-300: hsl(300, 100%, 92%);
+  --primary-400: hsl(300, 100%, 87%);
+  --primary-500: hsl(300, 100%, 80%);
+  --primary-600: hsl(300, 100%, 70%);
+  --primary-700: hsl(300, 100%, 60%);
+  --primary-800: hsl(300, 100%, 38%);
+  --primary-900: hsl(300, 100%, 17%);
+  --primary-950: hsl(300, 100%, 10%);
+  --primary-foreground: hsl(0, 98.5%, 98.5%);
+  --secondary: hsl(0, 97%, 97%);
+  --secondary-foreground: hsl(0, 20.5%, 20.5%);
+  --muted: hsl(0, 97%, 97%);
+  --muted-foreground: hsl(0, 55.6%, 55.6%);
+  --accent: hsl(0, 97%, 97%);
+  --accent-foreground: hsl(0, 20.5%, 20.5%);
+  --destructive: hsl(0, 57.7%, 24.5%);
+  --border: hsl(0, 92.2%, 92.2%);
+  --input: hsl(0, 92.2%, 92.2%);
+  --ring: hsl(0, 70.8%, 70.8%);
+  --chart-1: hsl(0, 64.6%, 22.2%);
+  --chart-2: hsl(0, 60%, 11.8%);
+  --chart-3: hsl(0, 39.8%, 7%);
+  --chart-4: hsl(0, 82.8%, 18.9%);
+  --chart-5: hsl(0, 76.9%, 18.8%);
+  --sidebar: hsl(0, 98.5%, 98.5%);
+  --sidebar-foreground: hsl(0, 14.5%, 10%);
+  --sidebar-primary: hsl(0, 20.5%, 20.5%);
+  --sidebar-primary-foreground: hsl(0, 98.5%, 98.5%);
+  --sidebar-accent: hsl(0, 97%, 97%);
+  --sidebar-accent-foreground: hsl(0, 20.5%, 20.5%);
+  --sidebar-border: hsl(0, 92.2%, 92.2%);
+  --sidebar-ring: hsl(0, 70.8%, 70.8%);
+}
+
+/* .dark {
+  --background: hsl(260, 20%, 6%);
+  --foreground: hsl(0, 98.5%, 98.5%);
+  --card: hsl(0, 20.5%, 20.5%);
+  --card-foreground: hsl(0, 98.5%, 98.5%);
+  --popover: hsl(0, 20.5%, 20.5%);
+  --popover-foreground: hsl(0, 98.5%, 98.5%);
+  --primary: hsl(0, 0%, 100%);
+  --primary-50: hsl(300, 100%, 98%);
+  --primary-100: hsl(300, 100%, 97%);
+  --primary-200: hsl(300, 100%, 94%);
+  --primary-300: hsl(300, 100%, 92%);
+  --primary-400: hsl(300, 100%, 87%);
+  --primary-500: hsl(300, 100%, 80%);
+  --primary-600: hsl(300, 100%, 70%);
+  --primary-700: hsl(300, 100%, 60%);
+  --primary-800: hsl(300, 100%, 38%);
+  --primary-900: hsl(300, 100%, 17%);
+  --primary-950: hsl(300, 100%, 10%);
+  --primary-foreground: hsl(0, 20.5%, 20.5%);
+  --secondary: hsl(298, 70%, 66%);
+  --secondary-foreground: hsl(0, 98.5%, 98.5%);
+  --muted: hsl(0, 26.9%, 26.9%);
+  --muted-foreground: hsl(0, 70.8%, 70.8%);
+  --accent: hsl(252, 78%, 58%);
+  --accent-foreground: hsl(0, 98.5%, 98.5%);
+  --destructive: hsl(0, 70.4%, 19.1%);
+  --border: hsl(298, 100%, 76%);
+  --input: hsl(0, 100%, 100%, 15%);
+  --ring: hsl(0, 55.6%, 55.6%);
+  --chart-1: hsl(0, 48.8%, 24.3%);
+  --chart-2: hsl(0, 69.6%, 17%);
+  --chart-3: hsl(0, 76.9%, 18.8%);
+  --chart-4: hsl(0, 62.7%, 26.5%);
+  --chart-5: hsl(0, 64.5%, 24.6%);
+  --sidebar: hsl(0, 20.5%, 20.5%);
+  --sidebar-foreground: hsl(0, 98.5%, 98.5%);
+  --sidebar-primary: hsl(0, 48.8%, 24.3%);
+  --sidebar-primary-foreground: hsl(0, 98.5%, 98.5%);
+  --sidebar-accent: hsl(0, 26.9%, 26.9%);
+  --sidebar-accent-foreground: hsl(0, 98.5%, 98.5%);
+  --sidebar-border: hsl(0, 100%, 100%, 10%);
+  --sidebar-ring: hsl(0, 55.6%, 55.6%);
+} */
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+@layer components {
+  .custom-container {
+    @apply mx-auto px-[10px] lg:px-0 max-w-full md:max-w-[768px] lg:max-w-[1224px];
+  }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer utilities {
+  h1 {
+    @apply font-medium text-[48px];
+  }
+  h2 {
+    @apply font-medium text-[36px];
+  }
+  h3 {
+    @apply font-medium text-[24px];
+  }
+  h4 {
+    @apply font-medium text-[18px];
+  }
+  h5 {
+    @apply font-medium text-[16px];
+  }
+  h6 {
+    @apply font-normal text-[14px];
+  }
+  p {
+    @apply font-normal text-[12px];
   }
 }
