--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-manrope: var(--font-manrope);
+  --font-lobster: var(--font-lobster);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -154,8 +155,8 @@
 }
 
 @layer components {
-  .custom-container {
-    @apply mx-auto px-[10px] lg:px-0 max-w-full md:max-w-[768px] lg:max-w-[1224px];
+  .container-new {
+    @apply mx-auto px-[15px] lg:px-0 w-full md:max-w-[768px] lg:max-w-[1224px];
   }
 }
 
