--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -183,3 +183,15 @@
     @apply font-normal text-[12px];
   }
 }
+
+/* @keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.bg-gradient-animate {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradientBG 10s ease infinite;
+} */
